--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<% include head %>
-	<title>Feed Me</title>
+	<title>FeedMe</title>
+
+	<!-- Custom CSS Stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
 </head>
 <body>
-	<% include teacher/partials/navbar %>
+	<div class="intro-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="intro-message">
+						<h1>FeedMe</h1>
+						<hr class="intro-divider">
+						<ul class="list-inline intro-social-buttons">
+							<li>
+								<a href="" class="btn btn-primary btn-lg"><i class="fa fa-pencil"></i> <span class="network-name">Profesores</span></a>
+							</li>
+							<li>
+								<a href="" class="btn btn-default btn-lg"><i class="fa fa-paper-plane"></i> <span class="network-name">Estudiantes</span></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<% include scripts %>
 </body>
