--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,10 @@
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							<li>
-								<a href="" class="btn btn-primary btn-lg"><i class="fa fa-pencil"></i> <span class="network-name">Profesores</span></a>
+								<a href="#" class="btn btn-primary btn-lg"><i class="fa fa-pencil"></i> <span class="network-name">Profesores</span></a>
 							</li>
 							<li>
-								<a href="" class="btn btn-default btn-lg"><i class="fa fa-paper-plane"></i> <span class="network-name">Estudiantes</span></a>
+								<a href="/student" class="btn btn-default btn-lg"><i class="fa fa-paper-plane"></i> <span class="network-name">Estudiantes</span></a>
 							</li>
 						</ul>
 					</div>
