--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/sb-admin.js"></script>
 <script type="text/javascript" src="/js/metisMenu.min.js"></script>
