--- a/views/student/pages/login-register-stu.ejs
+++ b/views/student/pages/login-register-stu.ejs
@@ -11,6 +11,15 @@
 	<div class="container">
 		<div class="row">
 			<h1 class="title-header">FeedMe</h1>
+			<% if (message.length > 0){ %>
+				<div class="alert alert-danger alert-dismissable">
+					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+						&times;
+					</button>
+					
+					<%= message %>
+				</div>
+			<% } %>
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-md-offset-2">
