Student login and logout completely functional

--- a/views/student/pages/dashboard-stu.ejs
+++ b/views/student/pages/dashboard-stu.ejs
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/dashboard-stu.css">
 </head>
 <body>
-	<h1><%= user.firstName %></h1>
+	<% include ../partials/navbar-stu %>
 
 	<% include ../../scripts %>
 </body>
