Added basic edit profile GUI

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 <!-- MetisMenu CSS -->
-<link rel="stylesheet" type="text/css" href="/node_modules/metismenu/dist/metisMenu.min.css">
+<link rel="stylesheet" type="text/css" href="/stylesheets/metisMenu.min.css">
 
 <!-- Timeline CSS -->
 <link rel="stylesheet" type="text/css" href="/stylesheets/sb-admin.css">
