--- a/views/student/pages/dashboard-stu.ejs
+++ b/views/student/pages/dashboard-stu.ejs
@@ -10,6 +10,79 @@
 <body>
 	<% include ../partials/navbar-stu %>
 
+	<div id="page-wrapper">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1 class="page-header"><%= user.firstName %> <%= user.lastName %></h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-3">
+				<div class="panel panel-primary">
+					<div class="panel-heading">Imagen</div>
+					<div class="panel-body">
+						<div class="avatar">
+							<img class="avatar-img" src="<%= user.profilePicturePath %>" alt="Profile Picture">
+						</div>
+					</div>
+					<div class="panel-footer">
+						<a href="javascript:void(0)" onclick="uploadProfilePicture();">Cambiar Foto</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-9">
+				<div class="panel panel-primary">
+					<div class="panel-heading">Informaci&oacute;n B&aacute;sica</div>
+					<div class="panel-body">
+						<div id="profile">
+							<div class="col-lg-6">
+								<h4 id="user-name"><%= user.firstName %> <%= user.lastName %></h4>
+								<h4 id="user-school"><%= user.school %></h4>
+							</div>
+							<div class="col-lg-6">
+								<h4 id="user-email"><%= user.email %></h4>
+							</div>
+						</div>
+						<div id="edit-profile" style="display: none;">
+							<form id="edit-profile-form" role="form" method="post" action="/student/dashboard/edit-profile">
+								<div class="col-lg-6">
+									<div class="form-group">
+										<input type="text" class="form-control" value="<%= user.firstName %>" name="firstName" tabindex="1">
+									</div>
+									<div class="form-group">
+										<input type="text" class="form-control" value="<%= user.lastName %>" name="lastName" tabindex="2">
+									</div>
+									<div class="form-group">
+										<input type="text" class="form-control" value="<%= user.school %>" name="school" tabindex="3">
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<div class="form-group">
+										<input type="text" class="form-control" value="<%= user.email %>" name="email" tabindex="4">
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="panel-footer">
+						<a id="edit-profile-link" href="#">Editar</a>
+						<button id="edit-profile-submit-btn" style="display: none;" type="submit" form="edit-profile-form" class="btn btn-success">Guardar</button>
+					</div>
+				</div>
+			</div>
+		</div> <!-- row -->
+	</div> <!-- page wrapper -->
+
 	<% include ../../scripts %>
+	<script type="text/javascript">
+		$(document).ready(function (){
+			$('#edit-profile-link').on('click', function(event){
+				$('#profile').hide();
+				$('#edit-profile-link').hide();
+				$('#edit-profile').show();
+				$('#edit-profile-submit-btn').show();
+			});
+		});
+	</script>
 </body>
 </html>
