--- a/views/student/partials/navbar-stu.ejs
+++ b/views/student/partials/navbar-stu.ejs
@@ -123,13 +123,13 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    <a href="/student/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cursos<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="curso.ejs">Matematicas 8D</a>
+                            <a href="#">Matematicas 8D</a>
                         </li>
                         <li>
                             <a href="#">Castellano 7A</a>
