Teacher login and register working

--- a/views/teacher/partials/navbar-tea.ejs
+++ b/views/teacher/partials/navbar-tea.ejs
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Agustín Gomez</a>
+        <a class="navbar-brand" href="teacher/dashboard"><%= user.firstName %> <%= user.lastName %></a>
     </div>
     <!-- /.navbar-header -->
 
