--- a/views/teacher/pages/login-register-tea.ejs
+++ b/views/teacher/pages/login-register-tea.ejs
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<% include ../../head %>
-	<title>FeedMe | Estudiantes</title>
+	<title>FeedMe | Profesores</title>
 
 	<!-- Custom CSS Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/stylesheets/login-register-stu.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/login-register-tea.css">
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<h1 class="title-header">FeedMe</h1>
-			<h2 class="title-header">Estudiantes</h2>
+			<h2 class="title-header">Profesores</h2>
 			<% if (message.length > 0){ %>
 				<div class="alert alert-danger alert-dismissable">
 					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
@@ -29,7 +29,7 @@
 						<h3 class="panel-title">Iniciar Sesi&oacute;n</h3>
 					</div>
 					<div class="panel-body">
-						<form role="form" method="post" action="/student/login">
+						<form role="form" method="post" action="/teacher/login">
 							<fieldset>
 								<div class="form-group">
 									<input class="form-control" type="email" placeholder="Email" name="email" autofocus>
@@ -49,7 +49,7 @@
 						<h3 class="panel-title">Registrarse</h3>
 					</div>
 					<div class="panel-body">
-						<form role="form" method="post" action="/student/register">
+						<form role="form" method="post" action="/teacher/register">
 							<fieldset>
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Nombre" name="firstName">
@@ -77,6 +77,7 @@
 			</div>
 		</div>
 	</div>
+
 	<% include ../../scripts %>
 </body>
 </html>
