--- a/public/stylesheets/principal.css
+++ b/public/stylesheets/principal.css
@@ -93,3 +93,31 @@
 .alumnos-informe{
   width: 33%;
 }
+
+.blur {
+    -webkit-filter: blur(5px) grayscale(50%);
+}
+
+.modal-backdrop {
+    background-color: #fff;
+}
+
+@media (min-width: 768px) {
+    .modal-content {
+        -webkit-box-shadow: 0 1px 5px rgba(0,0,0,.5);
+        box-shadow: 0 1px 5px rgba(0,0,0,.5);
+    }
+    .modal-content {
+        background-color: #f4f7f9;
+        border: 0; 
+        border-radius: 2px;
+        -webkit-box-shadow: none; 
+        box-shadow: none; 
+    }
+    .modal-dialog {
+        color: #526880;
+    }
+    .modal-footer {
+        border-top: none; 
+    }
+}
