--- a/views/head.ejs
+++ b/views/head.ejs
@@ -21,3 +21,6 @@
 
 <!-- Font Awesome CSS -->
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
