--- a/views/teacher/pages/create-activity.ejs
+++ b/views/teacher/pages/create-activity.ejs
@@ -25,7 +25,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading clearfix">
-                            <label for="titulo">8D Actividad 8</label>
+                            <label for="titulo">Nombre Curso FIXXXXXXXXX (debesiese salir el nombre del curso y su actividad)</label>
 
                             <input class="titulo-cuestionario" id="titulo" value="" placeholder="Ingrese título">
                             <div class="pull-right">
@@ -37,8 +37,14 @@
                         <div class="panel-body clearfix">
                           <form role="form" ng-repeat= "question in questions">
                                 <div class="form-group">
+                                    <!-- show the question number i.e. "Pregunta 1" -->
                                     <label>Pregunta {{questions.indexOf(question) + 1}}</label>
+                                    <!-- input to put the question -->
                                     <input class="form-control" ng-model= 'question.questionName'>
+                                </div>
+                                <!-- display the posible answers -->
+                                <div class= "respuestas" ng-if="question.type == MULTIPLE_CHOICE">
+                                  <% include ../../question/multiple-choice %>
                                 </div>
                             </form>
 
@@ -64,10 +70,10 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
-                                <a  class="list-group-item" ng-click ="addQuestion('multipleChoice')">
+                                <a  class="list-group-item" ng-click ="addQuestion(MULTIPLE_CHOICE)">
                                     <i class="fa fa-asterisk fa-fw"></i> Pregunta de Alternativas
                                 </a>
-                                <a class="list-group-item" ng-click ="addQuestion('yesNo')">
+                                <a class="list-group-item" ng-click ="addQuestion(YES_NO)">
                                     <i class="fa fa-asterisk fa-fw"></i> Si o No
                                 </a>
                                 <a href="#" class="list-group-item">
