create new activity flow

--- a/views/teacher/pages/courses-tea.ejs
+++ b/views/teacher/pages/courses-tea.ejs
@@ -15,6 +15,32 @@
 	 
 		 <% include ../partials/courses-partial-tea %>
 
+		 <div class="row" id="activites-section" style="display:none">
+		    <div class="col-lg-8">
+		        <div class="panel panel-default">
+		            <div class="panel-heading">
+		                <h3 class="panel-title pull-left">Actividades</h3>
+		                <a href="/teacher/courses/activity/new/<%= course._id %>" class="btn btn-default pull-right">
+		                    <i class="fa fa-plus"></i>
+		                </a>
+		                <div class="clearfix"></div>
+		            </div>
+		            <div class="panel-body">
+		            	<% for (var i = 0; i < activities.length; i++){ %>
+		                    <% var activity = activities[i]; %>
+
+		                    <div class="alert alert-danger">
+		                        <a href="#" class="alert-link pull-left"><%= activity.name %></a>
+		                        	<div class="pull-right"><strong>0/31</strong></div>
+		                        <div class="clearfix"></div>
+		                	</div>
+		                <% } %>
+		            </div>
+		        </div>
+		    </div>
+
+		</div>
+
 		 <div class="row" id ="students-section" style="display: none;">
 		    <div class="col-lg-8">
 		        <div class="panel panel-default">
@@ -37,31 +63,7 @@
 			</div>
 		</div>
 
-		<div class="row" id="activites-section" style="display:none">
-		    <div class="col-lg-8">
-		        <div class="panel panel-default">
-		            <div class="panel-heading">
-		                <h3 class="panel-title pull-left">Actividades</h3>
-		                <a href="crearCuestionario.ejs" class="btn btn-default pull-right">
-		                    <i class="fa fa-plus"></i>
-		                </a>
-		                <div class="clearfix"></div>
-		            </div>
-		            <div class="panel-body">
-		            	<% for (var i = 0; i < activities.length; i++){ %>
-		                    <% var activity = activities[i]; %>
-
-		                    <div class="alert alert-danger">
-		                        <a href="#" class="alert-link pull-left"><%= activity.name %></a>
-		                        	<div class="pull-right"><strong>0/31</strong></div>
-		                        <div class="clearfix"></div>
-		                	</div>
-		                <% } %>
-		            </div>
-		        </div>
-		    </div>
-
-		</div>
+		
 
 
     </div>
