Able to change alternatives text without changing 'A)' to '@)'. Plus accepts duplicated strings. Set also the answers to empty and do a placeholder 'opcion A'

--- a/views/question/create-multiple-choice.ejs
+++ b/views/question/create-multiple-choice.ejs
@@ -2,9 +2,10 @@
 <div class="radio" ng-repeat= "option in question.choices">
 
     <div class="form-group input-group">
-        <!-- Add the letter corresponding -->
+        <!-- Add the corresponding letter-->
         <span class="input-group-addon"> {{ question.choices.indexOf(option) + 1 | character}})</span>
-        <input type="text" class="form-control" ng-model= "option">
+        <!-- If there is no option, the placeholder will be of this format: opcion A -->
+        <input type="text" class="form-control" ng-model= "option.value" placeholder="opción {{ question.choices.indexOf(option) + 1 | character}}">
         <span class="input-group-addon" ng-click = "deleteChoice(question, option)">X</span>
     </div>
 
