--- a/views/teacher/pages/courses-tea.ejs
+++ b/views/teacher/pages/courses-tea.ejs
@@ -20,7 +20,7 @@
 		        <div class="panel panel-default">
 		            <div class="panel-heading">
 		                <h3 class="panel-title pull-left">Actividades</h3>
-		                <a href="/teacher/courses/activity/new/<%= course._id %>" class="btn btn-default pull-right">
+		                <a href="/teacher/courses/<%= course._id %>/activity/new" class="btn btn-default pull-right">
 		                    <i class="fa fa-plus"></i>
 		                </a>
 		                <div class="clearfix"></div>
