--- a/views/teacher/partials/navbar-tea.ejs
+++ b/views/teacher/partials/navbar-tea.ejs
@@ -94,12 +94,12 @@
                 <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-                <li><a href="index.html"><i class="fa fa-user fa-fw"></i> ver perfil</a>
+                <li><a href="/teacher/dashboard"><i class="fa fa-user fa-fw"></i> Ver Perfil</a>
                 </li>
                 <li><a href="#"><i class="fa fa-gear fa-fw"></i> Ajustes</a>
                 </li>
                 <li class="divider"></li>
-                <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
+                <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
                 </li>
             </ul>
             <!-- /.dropdown-user -->
@@ -128,7 +128,6 @@
                 <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cursos<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-
                         <% for (var i = 0; i < courses.length; i++){ %>
                             <% var course = courses[i]; %>
                             <li>
@@ -139,20 +138,11 @@
                         <li>
                             <a id="add-course-link" href="#modal-course" role="button" data-toggle="modal"><i class="fa fa-plus"></i> Agregar Curso</a>
                         </li>
-
-                        <!--
-                        <li>
-                            <a href="curso.ejs">Matematicas 8D</a>
-                        </li>
-                        <li>
-                            <a href="#">Castellano 7A</a>
-                        </li>
-                        -->
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="planillas.ejs"><i class="fa fa-table fa-fw"></i> Planillas</a>
+                    <a href="#"><i class="fa fa-table fa-fw"></i> Planillas</a>
                 </li>
                 
             </ul>
@@ -167,7 +157,7 @@
         <div class="modal-content">
             <div class="container">
                 <h3>Agregar Nuevo Curso</h3>
-                <form id="add-new-course" method="post" action="/teacher/add-new-course">
+                <form id="add-new-course" method="post" action="/teacher/courses/new">
                     <fieldset>
                         <div class="row">
                             <div class="form-group col-md-6">
