--- a/views/teacher/pages/create-activity.ejs
+++ b/views/teacher/pages/create-activity.ejs
@@ -16,7 +16,7 @@
         <div id="page-wrapper" ng-controller="activityCtrl">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><%= course.name %> - Crear Actividad</h1>
+                    <h1 class="page-header"><%= course.name %> - Crear Actividad <%= course.activities.length + 1 %> </h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -89,9 +89,9 @@
                                 <li class="list-group-item pressable" ng-click ="addQuestion(SHORT_ANSWER)">
                                     <i class="fa fa-asterisk fa-fw"></i> Respuesta Corta
                                 </li>
-                                <a href="#" class="list-group-item pressable" ng-click ="addQuestion(LONG_ANSWER)">
+                                <li class="list-group-item pressable" ng-click ="addQuestion(LONG_ANSWER)">
                                     <i class="fa fa-asterisk fa-fw"></i> Comentario
-                                </a>
+                                </li>
                             </ul>
                         </div>
                         <!-- /.panel-body -->
@@ -107,15 +107,15 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
-                                <a href="#" class="list-group-item pressable">
+                                <li class="list-group-item pressable">
                                     <i class="fa fa-asterisk fa-fw"></i> Planilla videos
-                                </a>
-                                <a href="#" class="list-group-item pressable">
+                                </li>
+                                <li href="#" class="list-group-item pressable">
                                     <i class="fa fa-asterisk fa-fw"></i> Planilla presentacion power point
-                                </a>
-                                <a href="#" class="list-group-item pressable">
+                                </li>
+                                <li href="#" class="list-group-item pressable">
                                     <i class="fa fa-asterisk fa-fw"></i> Planilla juegos grupales
-                                </a>
+                                </li>
                             </div>
                         </div>
                         <!-- /.panel-body -->
