--- a/views/question/create-yes-no.ejs
+++ b/views/question/create-yes-no.ejs
@@ -1,3 +1,5 @@
+<input class="form-control" ng-model='question.questionName' placeholder="Pregunta de si o no">
+
 <label>Opciones</label>
 <div class="radio" ng-repeat= "option in question.choices">
 
