Creates activity with its questions and add it to the course

--- a/views/teacher/pages/new-activity.ejs
+++ b/views/teacher/pages/new-activity.ejs
@@ -14,7 +14,8 @@
 
     <% include ../partials/navbar-tea %>
         <div id="page-wrapper" ng-controller="activityCtrl">
-            <div class="row">
+            <!-- set the course. Note that it has to be a string, otherwise it throws an error -->
+            <div class="row" ng-init="setCourse('<%= JSON.stringify(course) %>')">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= course.name %> - Crear Actividad <%= course.activities.length + 1 %> </h1>
                 </div>
