--- a/views/teacher/partials/courses-partial-tea.ejs
+++ b/views/teacher/partials/courses-partial-tea.ejs
@@ -38,7 +38,7 @@
                         <i class="fa fa-child fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge"><%= course.students.length %></div>
+                        <div class="huge"><%= students.length %></div>
                         <div>Alumnos</div>
                     </div>
                 </div>
