--- a/views/teacher/pages/courses-tea.ejs
+++ b/views/teacher/pages/courses-tea.ejs
@@ -13,7 +13,63 @@
 	 <div id="page-wrapper">
 
 	 
-		 <% include ../partials/courses-partial-tea %>
+		 <div class="row">
+		    <div class="col-lg-12">
+		        <h1 class="page-header"><%= course.name %></h1>
+		    </div>
+		                <!-- /.col-lg-12 -->
+		</div>
+		<!-- /.row -->
+		<div class="row">
+		    <div class="col-lg-4 col-md-6">
+		        <div class="panel panel-primary">
+		            <div class="panel-heading">
+		                <div class="row">
+		                    <div class="col-xs-3">
+		                        <i class="fa fa-comments fa-5x"></i>
+		                    </div>
+		                    <div class="col-xs-9 text-right">
+		                        <div class="huge"><%= course.activities.length %></div>
+		                        <div>Actividades</div>
+		                    </div>
+		                </div>
+		            </div>
+		            <a href="#" id="activites-section-link">
+		                <div class="panel-footer">
+		                    <span class="pull-left">Ver M&aacute;s</span>
+		                    <span class="pull-right">
+		                        <i class="fa fa-arrow-circle-right"></i>
+		                    </span>
+		                    <div class="clearfix"></div>
+		                </div>
+		            </a>
+		        </div>
+		    </div>
+		    <div class="col-lg-4 col-md-6">
+		        <div class="panel panel-green">
+		            <div class="panel-heading">
+		                <div class="row">
+		                    <div class="col-xs-3">
+		                        <i class="fa fa-child fa-5x"></i>
+		                    </div>
+		                    <div class="col-xs-9 text-right">
+		                        <div class="huge"><%= students.length %></div>
+		                        <div>Alumnos</div>
+		                    </div>
+		                </div>
+		            </div>
+		            <a href="#" id="students-section-link">
+		                <div class="panel-footer">
+		                    <span class="pull-left">Ver M&aacute;s</span>
+		                    <span class="pull-right">
+		                        <i class="fa fa-arrow-circle-right"></i>
+		                    </span>
+		                    <div class="clearfix"></div>
+		                </div>
+		            </a>
+		        </div>
+		    </div>
+		</div>
 
 		 <div class="row" id="activites-section" style="display:none">
 		    <div class="col-lg-8">
