--- a/views/teacher/pages/courses-tea.ejs
+++ b/views/teacher/pages/courses-tea.ejs
@@ -84,6 +84,14 @@
 		                <div class="clearfix"></div>
 		            </div>
 		            <div class="panel-body">
+		            	<% if (activities.length == 0){ %>
+		            		<div class="alert alert-warning alert-dismissible">
+		            			<button type="button" class="close" data-dismiss="alert" aria-label="Cerrar">
+		            				<span aria-hidden="true">&times;</span>
+		            			</button>
+		            			No hay actividades disponibles en este curso.
+		            		</div>
+		            	<% } %>
 		            	<% for (var i = 0; i < activities.length; i++){ %>
 		                    <% var activity = activities[i]; %>
 
@@ -107,6 +115,14 @@
 		                <div class="clearfix"></div>
 		            </div>
 		            <div class="panel-body">
+		            	<% if (students.length == 0){ %>
+		            		<div class="alert alert-warning alert-dismissible">
+		            			<button type="button" class="close" data-dismiss="alert" aria-label="Cerrar">
+		            				<span aria-hidden="true">&times;</span>
+		            			</button>
+		            			No hay alumnos inscritos en este curso.
+		            		</div>
+		            	<% } %>
 		            	<% for (var i = 0; i < students.length; i++){ %>
 		                    <% var student = students[i]; %>
 
