student activity view

--- a/views/student/pages/courses-stu.ejs
+++ b/views/student/pages/courses-stu.ejs
@@ -36,7 +36,7 @@
 		                    <% var activity = activities[i]; %>
 
 		                    <div class="alert alert-danger">
-		                        <a href="#" class="alert-link pull-left"><%= activity.name %></a>
+		                        <a href="<%= course._id %>/activity/<%= activity._id %>" class="alert-link pull-left"><%= activity.name %></a>
 		                        	<div class="pull-right"><strong>0/31</strong></div>
 		                        <div class="clearfix"></div>
 		                	</div>
