--- a/views/teacher/pages/activity-tea.ejs
+++ b/views/teacher/pages/activity-tea.ejs
@@ -36,7 +36,7 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="list-group">
-                                        <a href="#" class="list-group-item">
+                                        <a href="/teacher/courses/<%= course._id %>/activity/<%= activity._id %>" class="list-group-item">
                                             <i class="fa fa-users fa-fw"></i>Todos
                                         </a>
                                         <% for (var i = 0; i < students.length; i++){ %>
