Alumno puede buscar cursos. Por ahora solo se busca por el nombre del curso

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -24,3 +24,11 @@
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+
+<!-- script for angular to work  -->
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
+<!-- Initialize angular app -->
+
+<script src="/js/angular/app.js"></script>
+<script src="/js/angular/controllers/module.js"></script>
