--- a/views/teacher/pages/new-activity.ejs
+++ b/views/teacher/pages/new-activity.ejs
@@ -8,11 +8,10 @@
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/create-activity.css">
 
-        <!-- script for angular to work  -->
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
 
         <!-- script for local angular app -->
-        <script src="/js/angular/app.js"></script>
+        <!-- <script src="/js/angular/app.js"></script> -->
         <!-- scripts for angular controllers -->
         <script src="/js/angular/controllers/activity.js"></script>
 
