--- a/views/student/partials/navbar-stu.ejs
+++ b/views/student/partials/navbar-stu.ejs
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+<script src="/js/angular/controllers/searchbar.js"></script>
+
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0" ng-app = "myApp">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -10,7 +12,7 @@
     </div>
     <!-- /.navbar-header -->
 
-    <ul class="nav navbar-top-links navbar-right">               
+    <ul class="nav navbar-top-links navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -88,7 +90,7 @@
                 </li>
             </ul>
         </li>
-        
+
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -108,20 +110,20 @@
     </ul>
     <!-- /.navbar-top-links -->
 
-    <div class="navbar-default sidebar" role="navigation">
+    <div class="navbar-default sidebar" role="navigation" ng-controller="searchbarCtrl">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
-                <!-- <li class="sidebar-search">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                    
-                </li> -->
+                  <li class="sidebar-search">
+                      <div class="input-group custom-search-form">
+                          <input type="text" class="form-control" placeholder="Search..." ng-model="searchFor">
+                          <span class="input-group-btn">
+                              <button class="btn btn-default" type="button" ng-click ="search()">
+                                  <i class="fa fa-search"></i>
+                              </button>
+                          </span>
+                      </div>
+
+                  </li>
                 <li>
                     <a href="/student/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
@@ -139,7 +141,7 @@
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
-                
+
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
